discussion/kv_engine/175057/175057_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: RangeScan Create and Cancel using mcbp

Add validation and executor code so that the RangeScan
create and cancel can be invoked using the memcached binary
protocol (opcodes 0xDA and 0xDC).

The create command requires the user specifies a JSON value
that encodes the numerous parameters of a scan. Validation
ensures that the value is JSON and that the collection-ID is
setup ready for privilege checks.

Cancel is much simpler, with only one parameter available.

The added markdown provides full details of each new command.

Note: RangeScan continue (0xDB) is a separate patch.

Change-Id: Ib1a056f6990f982b101d33ec3b03b7a13918e96b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-23 12:19:27.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-23 12:33:25.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46323/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(7007): error C2660: "KVBucket::cancelRangeScan": function does not take 2 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46323/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17666/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:7007:74: error: too few arguments to function call, expected 3, have 2 [clang-diagnostic-error]
    return acquireEngine(this)->getKVBucket()->cancelRangeScan(vbid, uuid);
                                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.h:953:5: note: "cancelRangeScan" declared here
    cb::engine_errc cancelRangeScan(Vbid vbid,
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17666/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:7007:74:
error: too few arguments to function call, expected 3, have 2 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17666/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38927/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:7007:74:
error: too few arguments to function call, expected 3, have 2
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38927/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27841/ : FAILURE

Compile error at [2022-05-23T12:30:13.112Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:7007:74:
error: too few arguments to function call, expected 3, have 2
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27841/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7278/ : FAILURE

Compile error at [2022-05-23T12:25:48.093Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:7007:74:
error: too few arguments to function call, expected 3, have 2
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7278/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7379/ : FAILURE

Compile error at [2022-05-23T12:26:50.264Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine.cc:7007:74:
error: no matching function for call to ?KVBucket::cancelRangeScan(Vbid&, cb::rangescan::Id&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7379/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19440/ : FAILURE

Compile error at [2022-05-23T12:28:18.089Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:7007:74:
error: no matching function for call to ?KVBucket::cancelRangeScan(Vbid&, cb::rangescan::Id&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19440/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20456/ : FAILURE

Compile error at [2022-05-23T12:29:24.824Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:7007:74:
error: too few arguments to function call, expected 3, have 2
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20456/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18642/ : FAILURE

Compile error at [2022-05-23T12:24:21.674Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:7007:74:
error: too few arguments to function call, expected 3, have 2
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18642/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19790/ : FAILURE

Compile error at [2022-05-23T12:28:34.452Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:7007:74:
error: no matching function for call to ?KVBucket::cancelRangeScan(Vbid&, cb::rangescan::Id&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19790/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16692/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-23 13:14:03.000000000
Message: 
Patch Set 4:

(4 comments)
Line:2255, daemon/mcbp_validators.cc -> Nit: There is a number of error situations here. You could be nice to the client and tell them whats wrong with

    cookie.setErrorContext("Datatype must be set to JSON");

Line:40, docs/range_scans/range_scan_cancel.md -> Nit: We've nuked this prefix... Now its as simple as: Status::KeyEnoent

Line:216, docs/range_scans/range_scan_create.md -> same as before..

Line:41, engines/utilities/engine.cc -> why not just inline them in the header like we do for the other ones?

----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-05-23 16:08:28.000000000
Message: 
Patch Set 4:

(5 comments)
File Comment: /PATCHSET_LEVEL -> updates coming
Line:2255, daemon/mcbp_validators.cc -> Ack

Line:40, docs/range_scans/range_scan_cancel.md -> Ack

Line:216, docs/range_scans/range_scan_create.md -> Done

Line:41, engines/utilities/engine.cc -> the header needs to include a few extra headers if they're inline (i've tried to forward declare all that I can) - the inline also doesn't bring any benefit as this isn't perf sensitive code

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-23 17:00:51.000000000
MISMATCHED INLINE COMMENT
Line:41, engines/utilities/engine.cc -> Np.. it was more just the lazy approach ;)
----------------------------------------------------------------------------------------------------------------------
